--- a/postgresql.conf
+++ b/postgresql.conf
@@ -255,12 +255,12 @@ min_wal_size = 80MB
 
 # - Archiving -
 
-#archive_mode = off		# enables archiving; off, on, or always
+archive_mode = on		# enables archiving; off, on, or always
 				# (change requires restart)
 #archive_library = ''		# library to use to archive a WAL file
 				# (empty string indicates archive_command should
 				# be used)
-#archive_command = ''		# command to use to archive a WAL file
+archive_command = 'cp %p $HOME/zkw63/%f'		# command to use to archive a WAL file
 				# placeholders: %p = path of file to archive
 				#               %f = file name only
 				# e.g. 'test ! -f /mnt/server/archivedir/%f && cp %p /mnt/server/archivedir/%f'
@@ -448,14 +448,14 @@ effective_cache_size = 8GB
 # - Where to Log -
 
 log_destination = 'syslog'
-#log_destination = 'stderr'		# Valid values are combinations of
+log_destination = 'stderr', 'csvlog'		# Valid values are combinations of
 					# stderr, csvlog, jsonlog, syslog, and
 					# eventlog, depending on platform.
 					# csvlog and jsonlog require
 					# logging_collector to be on.
 
 # This is used when logging to stderr:
-#logging_collector = off		# Enable capturing of stderr, jsonlog,
+logging_collector = on		# Enable capturing of stderr, jsonlog,
 					# and csvlog into log files. Required
 					# to be on for csvlogs and jsonlogs.
 					# (change requires restart)
@@ -463,7 +463,7 @@ log_destination = 'syslog'
 # These are only used if logging_collector is on:
 #log_directory = 'log'			# directory where log files are written,
 					# can be absolute or relative to PGDATA
-#log_filename = 'postgresql-%Y-%m-%d_%H%M%S.log'	# log file name pattern,
+log_filename = 'postgresql-%Y-%m-%d_%H%M%S.csv'	# log file name pattern,
 					# can include strftime() escapes
 #log_file_mode = 0600			# creation mode for log files,
 					# begin with 0 to use octal notation
@@ -493,7 +493,7 @@ log_destination = 'syslog'
 
 # - When to Log -
 
-#log_min_messages = warning		# values in order of decreasing detail:
+log_min_messages = error		# values in order of decreasing detail:
 					#   debug5
 					#   debug4
 					#   debug3
@@ -559,8 +559,8 @@ log_destination = 'syslog'
 					# of milliseconds.
 #log_checkpoints = on
 #log_connections = off
-#log_disconnections = off
-#log_duration = off
+log_disconnections = on
+log_duration = on
 #log_error_verbosity = default		# terse, default, or verbose messages
 #log_hostname = off
 #log_line_prefix = '%m [%p] '		# special values:
