--- a/postgresql.conf
+++ b/postgresql.conf
@@ -6,8 +6,8 @@
 #
 #   name = value
 #
-# (The "=" is optional.)  Whitespace may be used.  Comments are introduced with
-# "#" anywhere on a line.  The complete list of parameter names and allowed
+# (The \"=\" is optional.)  Whitespace may be used.  Comments are introduced with
+# \"#\" anywhere on a line.  The complete list of parameter names and allowed
 # values can be found in the PostgreSQL documentation.
 #
 # The commented-out settings shown in this file represent the default values.
@@ -16,13 +16,13 @@
 #
 # This file is read on server startup and when the server receives a SIGHUP
 # signal.  If you edit the file on a running system, you have to SIGHUP the
-# server for the changes to take effect, run "pg_ctl reload", or execute
-# "SELECT pg_reload_conf()".  Some parameters, which are marked below,
+# server for the changes to take effect, run \"pg_ctl reload\", or execute
+# \"SELECT pg_reload_conf()\".  Some parameters, which are marked below,
 # require a server shutdown and restart to take effect.
 #
 # Any parameter can also be given as a command-line option to the server, e.g.,
-# "postgres -c log_connections=on".  Some parameters can be changed at run time
-# with the "SET" SQL command.
+# \"postgres -c log_connections=on\".  Some parameters can be changed at run time
+# with the \"SET\" SQL command.
 #
 # Memory units:  B  = bytes            Time units:  us  = microseconds
 #                kB = kilobytes                     ms  = milliseconds
@@ -76,7 +76,7 @@ max_connections = 1500			# (change requires restart)
 					# (change requires restart)
 
 # - TCP settings -
-# see "man tcp" for details
+# see \"man tcp\" for details
 
 #tcp_keepalives_idle = 0		# TCP_KEEPIDLE, in seconds;
 					# 0 selects the system default
@@ -336,7 +336,7 @@ archive_command = 'cp %p $HOME/zkw63/%f'		# command to use to archive a WAL file
 
 #primary_conninfo = ''			# connection string to sending server
 #primary_slot_name = ''			# replication slot on sending server
-#hot_standby = on			# "off" disallows queries during recovery
+#hot_standby = on			# \"off\" disallows queries during recovery
 					# (change requires restart)
 #max_standby_archive_delay = 30s	# max delay before canceling queries
 					# when reading WAL from archive;
@@ -447,8 +447,8 @@ effective_cache_size = 8GB
 
 # - Where to Log -
 
-log_destination = 'syslog'
-log_destination = 'stderr', 'csvlog'		# Valid values are combinations of
+# log_destination = 'syslog'
+log_destination = 'csvlog'		# Valid values are combinations of
 					# stderr, csvlog, jsonlog, syslog, and
 					# eventlog, depending on platform.
 					# csvlog and jsonlog require
@@ -683,7 +683,7 @@ log_timezone = 'Europe/Moscow'
 					#   notice
 					#   warning
 					#   error
-#search_path = '"$user", public'	# schema names
+#search_path = '\"$user\", public'	# schema names
 #row_security = on
 #default_table_access_method = 'heap'
 #default_tablespace = ''		# a tablespace name, '' uses the default
